Update projects tab

--- a/style/styles.css
+++ b/style/styles.css
@@ -179,8 +179,9 @@
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  border: 1px solid #1f8dd6;
+  background-color: #1f8dd6;
+  color: white;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -192,16 +193,17 @@
   cursor: pointer;
   padding: 14px 16px;
   transition: 0.3s;
+  width: 10%;
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #ddd;
+  background-color: #16679c;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: #16679c;
 }
 
 /* Style the tab content */
@@ -344,4 +346,56 @@
   to {
     opacity: 1;
   }
+}
+/* Style the tab */
+.tabSide {
+  display: flex;
+  flex-direction: column;
+
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: 10%;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tabSide button {
+  display: block;
+  background-color: #1f8dd6;
+  color: white;
+  padding: 22px 10px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  text-align: center;
+  transition: 0.3s;
+  border-bottom: 1px white solid;
+}
+
+/* Change background color of buttons on hover */
+.tabSide button:hover {
+  background-color: #16679c;
+  color: white;
+}
+
+/* Create an active/current "tab button" class */
+.tabSide button.active {
+  background-color: #16679c;
+}
+
+/* Style the tab content */
+.tabcontentSide {
+  padding: 0px 12px;
+  border: 1px solid #ccc;
+  width: 90%;
+  border-left: none;
+}
+
+#applicationPanel {
+  display: flex;
+}
+
+#Applications {
+  padding: 0px !important;
 }
