--- a/style/styles.css
+++ b/style/styles.css
@@ -179,8 +179,8 @@
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #1f8dd6;
-  background-color: #1f8dd6;
+  border: 1px solid #8acffc;
+  background-color: #8acffc;
   color: white;
 }
 
@@ -220,7 +220,7 @@
 .project-container {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 5%;
+  margin: 5% 0%;
 }
 
 .content-head a {
@@ -257,7 +257,7 @@
 /* Style the buttons that are used to open the tab content */
 .tabSide button {
   display: block;
-  background-color: #1f8dd6;
+  background-color: #8acffc;
   color: white;
   padding: 22px 10px;
   width: 100%;
@@ -268,6 +268,7 @@
   text-align: center;
   transition: 0.3s;
   border-bottom: 1px white solid;
+  border-top: 1px white solid;
 }
 
 /* Change background color of buttons on hover */
@@ -303,8 +304,11 @@
 
 .slideshowLinks {
   width: 100%;
+  box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.76);
 }
-
+iframe {
+  box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.76);
+}
 .projectSlideshow {
   width: inherit;
 }
@@ -312,13 +316,25 @@
 .appSlideshowContainer {
   display: flex;
   justify-content: space-around;
-  margin-top:3%;
+  margin-top: 3%;
+  margin-bottom: 5%;
 }
 
 .appFeatures {
-  width: 40%;
+  width: 50%;
+}
+.appFeatures h3 {
+  margin-top: 0;
+}
+.appProjHeader {
+  padding: 1% 3% 0% 3%;
+}
+
+.appSlideshowContainer .appStory {
+  width: 50%;
+  margin: 0 !important;
 }
 
 .appStory {
-  padding: 3% 5%;
+  margin: 0% 3% 5% 3%;
 }
