--- a/style/styles.css
+++ b/style/styles.css
@@ -339,3 +339,9 @@ iframe {
 .appStory {
   margin: 0% 3% 5% 3%;
 }
+
+.knowledgeButt {
+  width: 10%;
+  text-align: center !important;
+  text-decoration: none;
+}
