--- a/style/styles.css
+++ b/style/styles.css
@@ -155,6 +155,9 @@
   #resume-sidePanel p {
     margin: auto;
   }
+  .PhoneBlocker {
+    display: block !important;
+  }
 }
 
 #homePageIntro {
@@ -344,4 +347,15 @@ iframe {
   width: 10%;
   text-align: center !important;
   text-decoration: none;
+}
+
+.PhoneBlocker {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 100;
 }
