--- a/style/styles.css
+++ b/style/styles.css
@@ -1,7 +1,11 @@
 * {
   font-family: sans-serif;
 }
-
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
 /* .header {
   margin-top: 20px;
   text-align: center;
