--- a/style/styles.css
+++ b/style/styles.css
@@ -47,51 +47,6 @@ body {
   margin: 5% 10%;
 }
 
-.skillBar-Back {
-  width: 100%;
-  height: 2em;
-  border-radius: 1em;
-  background-color: #2d3e50;
-}
-
-.skillBar {
-  width: 100%;
-  height: 2em;
-  border-radius: 1em;
-  background-color: #1f8dd6;
-}
-
-.skill-10 {
-  width: 10%;
-}
-.skill-20 {
-  width: 20%;
-}
-.skill-30 {
-  width: 30%;
-}
-.skill-40 {
-  width: 40%;
-}
-.skill-50 {
-  width: 50%;
-}
-.skill-60 {
-  width: 60%;
-}
-.skill-70 {
-  width: 70%;
-}
-.skill-80 {
-  width: 80%;
-}
-.skill-90 {
-  width: 90%;
-}
-.skill-100 {
-  width: 100%;
-}
-
 #resume-sidePanel {
   display: flex !important;
   flex-direction: column;
@@ -124,44 +79,6 @@ body {
 .pure-menu-selected > .pure-menu-link:visited {
   color: white !important;
   font-weight: bold;
-}
-@media only screen and (max-width: 600px) {
-  .page-container-resume {
-    margin: 2% 2%;
-  }
-
-  .resume-skills {
-    width: 100%;
-  }
-  #resume-sidePanel {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-
-    border: none;
-  }
-  #resume-sidePanel img {
-    width: 40%;
-    margin-top: 0;
-  }
-  #contact-info-resume {
-    width: 40%;
-  }
-  .pure-g {
-    letter-spacing: 0.1em;
-  }
-
-  #resume-sidePanel i {
-    display: none;
-  }
-
-  #resume-sidePanel p {
-    margin: auto;
-  }
-  .PhoneBlocker {
-    display: block !important;
-  }
 }
 
 #homePageIntro {
@@ -365,12 +282,47 @@ iframe {
 }
 
 #icon-container {
+  display: flex;
+  justify-content: space-around;
 }
 
 .softwareIcon {
   margin: 2%;
   width: 8%;
   transition: width 0.2s ease;
+}
+
+@media only screen and (max-width: 600px) {
+  #destroyButton {
+    display: none;
+  }
+  #icon-container {
+    width: 90%;
+  }
+
+  #homePageIntro {
+    position: absolute;
+    top: 20%;
+    left: 10%;
+  }
+  #homePageIntro > h1 {
+    font-size: 65px;
+  }
+  #aboutMe > p {
+    width: 100% !important;
+    font-size: 18px;
+    padding-right: 15%;
+    text-align: center;
+  }
+  #aboutMe {
+    width: 100% !important;
+  }
+  #icon-container img {
+    width: 10%;
+  }
+  #icon-container img {
+    overflow: hidden;
+  }
 }
 
 #destroyButton {
@@ -390,4 +342,43 @@ iframe {
   100% {
     box-shadow: 0 0 0 35px rgba(255, 0, 0, 0);
   }
+}
+
+@media only screen and (max-width: 600px) {
+  .page-container-resume {
+    margin: 2% 2%;
+  }
+
+  .resume-skills {
+    width: 100%;
+  }
+  #resume-sidePanel {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+
+    border: none;
+  }
+  #resume-sidePanel img {
+    width: 40%;
+    margin-top: 0;
+  }
+  #contact-info-resume {
+    width: 40%;
+  }
+  .pure-g {
+    letter-spacing: 0.1em;
+  }
+
+  #resume-sidePanel i {
+    display: none;
+  }
+
+  #resume-sidePanel p {
+    margin: auto;
+  }
+  /* .PhoneBlocker {
+    display: block !important;
+  } */
 }
