--- a/style/styles.css
+++ b/style/styles.css
@@ -292,7 +292,26 @@ iframe {
   transition: width 0.2s ease;
 }
 
-@media only screen and (max-width: 2000px) {
+#destroyButton {
+  position: absolute;
+  top: 90%;
+  left: 2%;
+  background: rgb(202, 60, 60) !important;
+}
+
+.pulse-red {
+  animation: shadow-pulse 1s infinite;
+}
+@keyframes shadow-pulse {
+  0% {
+    box-shadow: 0 0 0 0px rgba(255, 0, 0, 0.5);
+  }
+  100% {
+    box-shadow: 0 0 0 35px rgba(255, 0, 0, 0);
+  }
+}
+
+@media only screen and (max-width: 900px) {
   #destroyButton {
     display: none;
   }
@@ -308,7 +327,6 @@ iframe {
   #homePageIntro > h1 {
     font-size: 35px;
     line-height: 1em;
-    color: red !important;
   }
   #aboutMe > p {
     width: 100% !important;
@@ -357,29 +375,7 @@ iframe {
   #resume-sidePanel p {
     margin: auto;
   }
-}
-
-#destroyButton {
-  position: absolute;
-  top: 90%;
-  left: 2%;
-  background: rgb(202, 60, 60) !important;
-}
-
-.pulse-red {
-  animation: shadow-pulse 1s infinite;
-}
-@keyframes shadow-pulse {
-  0% {
-    box-shadow: 0 0 0 0px rgba(255, 0, 0, 0.5);
-  }
-  100% {
-    box-shadow: 0 0 0 35px rgba(255, 0, 0, 0);
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  /* .PhoneBlocker {
+  .PhoneBlocker {
     display: block !important;
-  } */
+  }
 }
