--- a/style/styles.css
+++ b/style/styles.css
@@ -417,6 +417,21 @@ iframe {
   .home-menu i {
     padding: 0;
   }
+
+  .project-container {
+    display: block;
+    margin-bottom: 15%;
+  }
+
+  .websiteImages {
+    box-shadow: none !important;
+    border: 1px black solid;
+    margin-top: 10%;
+  }
+  .project-container > div {
+    width: 100%;
+  }
+
   #resume-sidePanel img {
     display: block !important;
     margin: auto;
@@ -428,8 +443,18 @@ iframe {
     height: 100vh;
     width: 100vw;
   }
+  .container .middle {
+    opacity: 1 !important;
+    transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    top: 0;
+    left: 0;
+  }
+  .text {
+    font-size: 12px;
+    padding: 8px 16px !important;
+  }
 }
-
 .container {
   position: relative;
   width: 100%;
