--- a/style/styles.css
+++ b/style/styles.css
@@ -320,6 +320,52 @@ iframe {
     box-shadow: 0 0 0 35px rgba(255, 0, 0, 0);
   }
 }
+.tabOptionsMob {
+  display: none;
+}
+.gamesVid {
+  width: 640;
+  height: 360;
+}
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  background-color: #2d3e50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+}
 
 @media only screen and (max-width: 900px) {
   #destroyButton {
@@ -462,48 +508,16 @@ iframe {
   .content-head {
     margin-top: 2em !important;
   }
-}
 
-.gamesVid {
-  width: 640;
-  height: 360;
-}
-.container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
+  .tabSide {
+    display: none;
+  }
+  .tabOptionsMob {
+    width: 100%;
+    display: block;
+  }
 
-.image {
-  opacity: 1;
-  display: block;
-  width: 100%;
-  transition: 0.5s ease;
-  backface-visibility: hidden;
-}
-
-.middle {
-  transition: 0.5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.container:hover .image {
-  opacity: 0.3;
-}
-
-.container:hover .middle {
-  opacity: 1;
-}
-
-.text {
-  background-color: #2d3e50;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
+  .tablinkMob {
+    flex-grow: 1;
+  }
 }
