--- a/style/styles.css
+++ b/style/styles.css
@@ -366,13 +366,85 @@ iframe {
   font-size: 16px;
   padding: 16px 32px;
 }
+/* Style the navigation menu */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  height: 50px;
+  top: 0;
+  width: 100%;
+  display: flex !important;
+  align-items: center;
+  display: none;
+  z-index: 4;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+#myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: inline;
+}
+
+/* Style the hamburger menu */
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+#myLinks a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #4caf50;
+  color: white;
+}
+
+#myLinks {
+  display: none;
+  position: fixed;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  z-index: 4;
+}
+#myLinks a {
+  color: white;
+  display: block;
+  background-color: #333;
+  border-bottom: 1px white solid;
+  padding: 20px;
+  text-decoration: none;
+  font-size: 17px;
+  margin: auto;
+  text-align: center;
+}
+
+#myLinks a:last-child {
+  border-bottom: none;
+}
 
 @media only screen and (max-width: 900px) {
   .pure-menu-item {
     font-size: 50%;
   }
-  .pure-menu-heading {
-    font-size: 75% !important;
+  .header {
+    display: none;
   }
   .home-menu i {
     margin-left: 1em !important;
@@ -534,5 +606,8 @@ iframe {
 
   .tablinkMob {
     flex-grow: 1;
+  }
+  .topnav {
+    display: block;
   }
 }
