--- a/style/styles.css
+++ b/style/styles.css
@@ -176,7 +176,7 @@ body {
 
   border: 1px solid #ccc;
   background-color: #f1f1f1;
-  width: 10%;
+  width: 15%;
 }
 
 /* Style the buttons that are used to open the tab content */
@@ -227,11 +227,16 @@ body {
   width: 40%;
   margin-top: 1em;
 }
+.slideshowLong {
+  width: 25%;
+  margin-top: 1em;
+}
 
 .slideshowLinks {
   width: 100%;
   box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.76);
 }
+
 iframe {
   box-shadow: 0px 0px 9px 2px rgba(0, 0, 0, 0.76);
 }
