--- a/style/styles.css
+++ b/style/styles.css
@@ -206,7 +206,7 @@ body {
 .tabSide button.active {
   background-color: #16679c;
 }
-
+/*blah*/
 /* Style the tab content */
 .tabcontentSide {
   padding: 0px 12px;
