--- a/style/styles.css
+++ b/style/styles.css
@@ -461,7 +461,7 @@ iframe {
 }
 @media only screen and (max-width: 900px) {
   #MobileApplicationBanner {
-    display: block;
+    display: block !important;
     text-align: center;
   }
   /* Style the navigation menu */
